fixed width issue on smaller mobile devies

--- a/style.css
+++ b/style.css
@@ -408,7 +408,6 @@ body{
     word-break: break-all;
 }
 .galleryRow{
-    margin: 10px -16px;
     animation: fadeIn ease 2s;
 }
 /*add padding between each column */
@@ -484,15 +483,16 @@ body{
     .welcome h1{
         display:none;
     }
+    
     .indexBtn{
-        margin-left: 20%;
-        
-    }
-    .logoMobile{
+        border: 2px solid #000;  
+        text-align: center;
         display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 40%;
+        margin: auto;
+    }
+    .logoMobile img{
+        display: block;
+        margin: auto;
     }
 
     /*contact page*/
@@ -589,12 +589,11 @@ body{
         width: 100%;
         padding: 0;
     }
-    .social img{
+/*     .social img{
         height:100%;
-    }
+    } */
     .books img{
-        width: auto;
-        margin-left: 10%;
+        margin: auto;
     }
 
 }
